<resources>
    <string name="app_name">Encober</string>
    <string name="app_name_caps">ENCOBER</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery">Gallery</string>
    <string name="permission_required_to_select_image">Permission required to select image</string>
    <string name="cancel">Select your choice</string>
    <string name="dialog_select_your_choice">Select</string>
    <string name="send_via">Sending via</string>
    <string name="error_check_internet_connection">Please check your internet connection</string>
    <string name="media_picker_dialog_capture_image">Capture image from camera</string>
    <string name="media_picker_dialog_capture_video">Capture video from camera</string>
    <string name="media_picker_dialog_gallery_image">Select image from gallery</string>
    <string name="media_picker_dialog_gallery_video">Select video from gallery</string>
    <string name="media_picker_dialog_select_your_choice">Select your choice</string>
    <string name="media_picker_message_please_free_up_space">Please free up some space on device before proceeding</string>
    <string name="permission_btn_allow">Allow</string>
    <string name="permission_btn_deny">Deny</string>
    <string name="permission_btn_cancel">Cancel</string>
    <string name="permission_label_settings">Settings</string>
    <string name="permission_rationale_camera_storage">Camera and Storage permission is required to access camera and select images from gallery.</string>
    <string name="permission_denied_camera_storage">Without the Camera and Storage permission camera and gallery will not work.</string>
    <string name="permission_never_ask_camera_storage">You previously selected to never ask again for Camera and Storage permission. You have to manually grant them from the app settings.</string>
    <string name="permission_rationale_storage">Storage permission is required to select files from local storage.</string>
    <string name="permission_denied_storage">Without the Storage permission, file selection will not work.</string>
    <string name="permission_never_ask_storage">You previously selected to never ask again for Storage permission. You have to manually grant it from the app settings.</string>
    <string name="message_select_smaller_video">Please select a smaller video. Maximum size should not exceed 200 MB</string>
    <string name="message_select_smaller_image">Please select a smaller image. Maximum size should not exceed 25 MB.</string>
    <string name="location_permission">Location permission required to access your current location and showing results accordingly. Need to turn on by clicking settings button from below.</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="settings">settings</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Play Service found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="cdesc_encober_logo">Encober Logo</string>
    <string name="login_label_splash">Log In</string>
    <string name="signup_label_splash">Sign Up</string>
    <string name="terms_and_conditions_label_adscreen">Terms and Conditions</string>
    <string name="generate_extra_income_label_adscreen">Generate extra income</string>
    <string name="you_set_the_schedule_label_adscreen">You set the schedule</string>
    <string name="generate_bold_label_adscreen">Generate</string>
    <string name="you_set_bold_label_adscreen">You set</string>
    <string name="cdesc_ad_image">Ad Image</string>
    <string name="welcome_label_login">Welcome</string>
    <string name="welcome_screen_sub_heading">Enter your email address which is register with ENCOBER to continue</string>
    <string name="email_label_login">Email</string>
    <string name="password_label_login">Password</string>
    <string name="confirm_password_label_login">Confirm Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="forgot_password_title_label">Forgot Password</string>
    <string name="email_hint_login">Enter your email</string>
    <string name="forgot_password_label_login">Forgot Password ?</string>
    <string name="dont_have_an_account_label_login">Don’t have an account? Signup</string>
    <string name="set_password_label">Set Password</string>
    <string name="error_empty_email_field">Please enter the Email</string>
    <string name="error_empty_password_field">Please enter the Password</string>
    <string name="error_wrong_email_field">Please enter the correct Email</string>
    <string name="error_wrong_password_length">Password must contain 6–20 characters</string>
    <string name="error_password_not_matched">Passwords are not matching</string>
    <string name="cdesc_back_button">Back Button</string>
    <string name="your_details_label">Your Details</string>
    <string name="name_label_details_page">Name</string>
    <string name="cell_phone_number_label_details_page">Cell Phone Number</string>
    <string name="address_label_details_page">Address</string>
    <string name="continue_label_details_page">Continue</string>
    <string name="accept_terms_and_conditions_label_details_page">I have read and accept the Terms and Conditions</string>
    <string name="please_accept_terms_and_conditions">Please accept the Terms and Conditions.</string>
    <string name="configure_your_profile_label">Configure your profile</string>
    <string name="personal_information_step_profile_page">Personal Information</string>
    <string name="bank_data_step_profile_page">Bank data</string>
    <string name="my_address_step_profile_profile_page">My Address</string>
    <string name="add_image_label_profile">Add Image</string>
    <string name="date_of_birth_label_profile">Date of Birth</string>
    <string name="choose_date_label_profile">Choose Date</string>
    <string name="next_btn_label_profile">Next</string>
    <string name="street_label_my_address">Street</string>
    <string name="exterior_no_label_my_address">Exterior No</string>
    <string name="interior_no_label_my_address">Interior No</string>
    <string name="postal_code_label_my_address">Postal Code</string>
    <string name="state_label_my_address">State</string>
    <string name="delegation_or_municipality_label_my_address">Delegation or Municipality</string>
    <string name="colony_label_my_address">Colony</string>
    <string name="city_label_my_address">City</string>
    <string name="cdesc_bank_logo">Bank Logo</string>
    <string name="bank_label_bank_data">Bank</string>
    <string name="account_number_label_bank_data">Account Number</string>
    <string name="digits_18_hint_bank_data">18 digits</string>
    <string name="send_label_forgot_password">Send</string>
    <string name="error_empty_DOB_field">Please select your Date of Birth</string>
    <string name="error_empty_image">Please select your display image</string>
    <string name="error_empty_street_field">Please enter the Street</string>
    <string name="error_empty_exterior_no_field">Please enter the Exterior Number</string>
    <string name="error_empty_interior_no_field">Please enter the Interior Number</string>
    <string name="error_empty_postal_code_field">Please enter the Postal Code</string>
    <string name="select_bank_label_bank_data">Select Bank</string>
    <string name="error_empty_account_no">Please enter the Account Number</string>
    <string name="error_invalid_account_no">Please enter the valid Account Number</string>
    <string name="error_empty_bank_field">Please select the Bank</string>
    <string name="start_label_main">Start</string>
    <string name="my_account_label_main">My Account</string>
    <string name="notifications_label_main">Notifications</string>
    <string name="profile_label_main">Profile</string>
    <string name="collection_label_main_top_radio">Collection</string>
    <string name="surveys_label_main_top_radio">Surveys</string>
    <string name="recover_label_main_top_radio">Recover</string>
    <string name="cdesc_map_menu_icon">Map Menu Icon</string>
    <string name="cdesc_map_track_icon">Map Track Icon</string>
    <string name="cdesc_dollar_icon">Dollar Icon</string>
    <string name="cdesc_user_icon">User Icon</string>
    <string name="you_are_inactive_now_label_start">You are inactive now</string>
    <string name="no_video_found_label_youtube_videos">No Video Found</string>
    <string name="my_videos_label_main">My Videos</string>
    <string name="no_reason_found_error_service_details">No reason found for this service</string>
    <string name="remove_label_delete_dialog">Remove</string>
    <string name="cancel_label_dialog_delete">Cancel</string>
    <string name="cdesc_delete_icon">Delete Icon</string>
    <string name="yes_label_add_service_dialog">Yes</string>
    <string name="cdesc_task_image">Task Image</string>
    <string name="next_level_label_my_profile">Next level : </string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="change_password_label_my_profile">Change password</string>
    <string name="private_information_label_my_profile">Private information</string>
    <string name="contact_encober_label_my_profile">Contact ENCOBER</string>
    <string name="cdesc_notification_icon">Notification Icon</string>
    <string name="your_notifications_will_appear_here_label">Your Notifications will appear here.</string>
    <string name="contact_label_register_visit">Contact</string>
    <string name="last_visit_label_register_visit">Last Visit</string>
    <string name="register_visit_label">Register Visit</string>
    <string name="see_map_label_register_visit">See Map</string>
    <string name="result_of_the_visit_label_register_visit">Result of the visit</string>
    <string name="comments_label_register_visit">Comments</string>
    <string name="see_all_label_register_visit">See All</string>
    <string name="clear_pad_label_register_visit">Clear Pad</string>
    <string name="save_signature_label_register_visit">Save Signature</string>
    <string name="signature_of_the_promiser_label_register_visit">Signature of the Promiser</string>
    <string name="promise_date_label_register_visit">Promise date</string>
    <string name="agreed_amount_label_register_visit">Agreed amount</string>
    <string name="generate_payment_notification_label_register_visit">Generate payment notification</string>
    <string name="no_comment_found_error">No comment found for this task.</string>
    <string name="type_here_hint">Type here…</string>
    <string name="register_label_service_details">Register</string>
    <string name="what_happened_on_the_visit_title">What happened on the visit ?</string>
    <string name="what_result_did_you_get_title">What result did you get?</string>
    <string name="cdesc_check_icon">Check Icon</string>
    <string name="payment_history_label_my_account">Payment history</string>
    <string name="it_is_understood_label">It is understood</string>
    <string name="cdesc_thumbs_up_icon">Thumbs up Icon</string>
    <string name="excellent_work_label_visit_dialog">Excellent work !</string>
    <string name="wait_for_the_results_label_visit_dialog">Wait for the results</string>
    <string name="cdesc_show_hide_password_icon">Show/Hide Password Icon</string>
</resources>