<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvWelcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/welcome_label_login"
        android:textColor="@color/main_text_color"
        android:textSize="32sp" />

    <View
        android:id="@+id/viewBelowWelcome"
        android:layout_width="40dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:background="@color/active_edittext_line_color" />

    <TextView
        android:id="@+id/tvWelcomeSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_screen_sub_heading" />


    <TextView
        android:id="@+id/tvWelcomeEmailTxt"
        style="@style/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/email_label_login" />

    <EditText
        android:id="@+id/etWelcomeEmail"
        style="@style/LoginEditText"
        android:theme="@style/LoginEditTextYellowTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:hint="@string/email_hint_login"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:maxLength="30"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/btnWelcomeContinue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/BlueGradientButton"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/continue_label_details_page" />



</LinearLayout>