<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:background="@drawable/back_filled_white_rounded_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingTop="24dp"
    android:paddingEnd="12dp"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/ivExcellentDialogIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cdesc_thumbs_up_icon"
        android:src="@drawable/ic_thumbs_up" />

    <TextView
        android:id="@+id/tvExcellentDialogHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/circular_std_bold"
        android:gravity="center"
        android:textColor="@color/main_text_color"
        android:textSize="18sp"
        android:text="@string/excellent_work_label_visit_dialog" />

    <TextView
        android:id="@+id/tvExcellentDialogSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/circular_std_book"
        android:gravity="center"
        android:textColor="@color/main_text_color"
        android:alpha="0.8"
        android:textSize="16sp"
        android:text="@string/wait_for_the_results_label_visit_dialog"
        />

    <Button
        android:id="@+id/btnExcellentDialog"
        style="@style/FullRoundedAccentColorButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/it_is_understood_label"
        android:textSize="12sp"
        />

</LinearLayout>