<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/tvLoginWelcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/login_label_splash"
        android:textColor="@color/main_text_color"
        android:textSize="32sp" />

    <View
        android:id="@+id/viewBelowLoginTxt"
        android:layout_width="40dp"
        android:layout_height="1dp"
        android:layout_below="@id/tvLoginWelcomeTxt"
        android:layout_marginStart="24dp"
        android:background="@color/active_edittext_line_color" />

    <TextView
        android:id="@+id/tvLoginEmailTxt"
        style="@style/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewBelowLoginTxt"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"

        android:text="@string/email_label_login" />

    <EditText
        android:id="@+id/etLoginEmail"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginEmailTxt"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/email_hint_login"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:theme="@style/LoginEditTextYellowTheme"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tvLoginPasswordTxt"
        style="@style/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLoginEmail"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/password_label_login" />


    <LinearLayout
        android:id="@+id/llLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginPasswordTxt"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/etLoginPassword"
            style="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:padding="4dp"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:theme="@style/LoginEditTextYellowTheme"
            tools:ignore="Autofill,LabelFor" />

        <ImageView
            android:id="@+id/ivLoginShowHidePassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/cdesc_show_hide_password_icon"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:src="@drawable/ic_show_password" />
    </LinearLayout>
    <View
        android:id="@+id/viewBelowPassword"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/llLoginPassword"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/main_text_color_40_alpha" />


    <TextView
        android:id="@+id/tvLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewBelowPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp"
        android:text="@string/forgot_password_label_login"
        android:textColor="@color/login_blue_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/BlueGradientButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tvLoginForgotPassword"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login_label_splash" />


    <TextView
        android:id="@+id/tvLoginDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/circular_std_book"
        android:padding="4dp"
        android:text="@string/dont_have_an_account_label_login"
        android:textColor="@color/login_blue_color"
        android:textSize="16sp"
        android:visibility="gone" />


</RelativeLayout>